style: update list dashboard menu in goal page

--- a/sira_goals_&_planner_path_1/code.html
+++ b/sira_goals_&_planner_path_1/code.html
@@ -95,56 +95,69 @@
             </p>
           </div>
         </div>
-        <nav class="flex flex-col gap-2 flex-1">
+        <nav class="flex-1 space-y-1 overflow-y-auto">
           <a
-            class="flex items-center gap-4 px-4 py-3 rounded-xl hover:bg-[#e7f3f2]/50 text-text-main/70 hover:text-text-main transition-colors group"
+            class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
             href="#"
           >
-            <span
-              class="material-symbols-outlined text-2xl group-hover:text-primary transition-colors"
-              >grid_view</span
-            >
-            <span class="font-body font-medium">Dashboard</span>
+            <span class="material-symbols-outlined">dashboard</span>
+            <span class="font-semibold text-sm">Dashboard</span>
           </a>
           <a
-            class="flex items-center gap-4 px-4 py-3 rounded-xl bg-[#e7f3f2] text-text-main transition-colors shadow-sm ring-1 ring-[#d0e8e6]"
+            class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
             href="#"
           >
-            <span
-              class="material-symbols-outlined text-2xl text-primary font-variation-fill"
-              >map</span
-            >
-            <span class="font-body font-bold">Goals &amp; Planner</span>
+            <span class="material-symbols-outlined">account_balance</span>
+            <span class="font-semibold text-sm">Account</span>
           </a>
           <a
-            class="flex items-center gap-4 px-4 py-3 rounded-xl hover:bg-[#e7f3f2]/50 text-text-main/70 hover:text-text-main transition-colors group"
+            class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
             href="#"
           >
-            <span
-              class="material-symbols-outlined text-2xl group-hover:text-primary transition-colors"
-              >account_balance_wallet</span
-            >
-            <span class="font-body font-medium">Accounts</span>
+            <span class="material-symbols-outlined">list_alt</span>
+            <span class="font-semibold text-sm">Transaction</span>
           </a>
           <a
-            class="flex items-center gap-4 px-4 py-3 rounded-xl hover:bg-[#e7f3f2]/50 text-text-main/70 hover:text-text-main transition-colors group"
+            class="flex items-center gap-3 px-4 py-3 bg-primary/10 text-primary rounded-xl transition-all"
             href="#"
           >
-            <span
-              class="material-symbols-outlined text-2xl group-hover:text-primary transition-colors"
-              >spa</span
-            >
-            <span class="font-body font-medium">Mindfulness</span>
+            <span class="material-symbols-outlined">track_changes</span>
+            <span class="font-bold text-sm">Goals</span>
           </a>
           <a
-            class="flex items-center gap-4 px-4 py-3 rounded-xl hover:bg-[#e7f3f2]/50 text-text-main/70 hover:text-text-main transition-colors group"
+            class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
             href="#"
           >
-            <span
-              class="material-symbols-outlined text-2xl group-hover:text-primary transition-colors"
-              >settings</span
-            >
-            <span class="font-body font-medium">Settings</span>
+            <span class="material-symbols-outlined">payments</span>
+            <span class="font-semibold text-sm">Split Bill</span>
+          </a>
+          <a
+            class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
+            href="#"
+          >
+            <span class="material-symbols-outlined">category</span>
+            <span class="font-semibold text-sm">Categories</span>
+          </a>
+          <a
+            class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
+            href="#"
+          >
+            <span class="material-symbols-outlined">pie_chart</span>
+            <span class="font-semibold text-sm">Budget</span>
+          </a>
+          <a
+            class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
+            href="#"
+          >
+            <span class="material-symbols-outlined">bar_chart</span>
+            <span class="font-semibold text-sm">Report</span>
+          </a>
+          <a
+            class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
+            href="#"
+          >
+            <span class="material-symbols-outlined">settings</span>
+            <span class="font-semibold text-sm">Setting</span>
           </a>
         </nav>
         <div class="mt-auto pt-6">
