config: install vite to help refactor the code

--- a/sira_goals_&_planner_path_3/code.html
+++ b/sira_goals_&_planner_path_3/code.html
@@ -59,6 +59,7 @@
       }
       .flux-gradient-text {
         background: linear-gradient(135deg, #0d1b1a 0%, #116b63 100%);
+        background-clip: text;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
       }
