refactor: implement partial components in goal planner page

--- a/sira_goals_&_planner_path_2/code.html
+++ b/sira_goals_&_planner_path_2/code.html
@@ -1,200 +1,13 @@
 <!DOCTYPE html>
 <html class="light" lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Sira - Goals &amp; Planner Path</title>
-    <link href="https://fonts.googleapis.com" rel="preconnect" />
-    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;500;600;700&amp;family=JetBrains+Mono:wght@400;500;700&amp;family=Outfit:wght@300;400;500;600&amp;display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    <script id="tailwind-config">
-      tailwind.config = {
-        darkMode: "class",
-        theme: {
-          extend: {
-            colors: {
-              primary: "#11d4c4",
-              "primary-hover": "#0fb9ab",
-              "background-light": "#f8fcfb",
-              "background-dark": "#102220",
-              "card-light": "rgba(255, 255, 255, 0.7)",
-              "card-stroke": "rgba(255, 255, 255, 0.6)",
-              "text-main": "#0d1b1a",
-              "text-secondary": "#4c9a93",
-            },
-            fontFamily: {
-              display: ["Epilogue", "sans-serif"],
-              body: ["Outfit", "sans-serif"],
-              mono: ["JetBrains Mono", "monospace"],
-            },
-            borderRadius: {
-              DEFAULT: "0.5rem",
-              lg: "1rem",
-              xl: "1.5rem",
-              "2xl": "2rem",
-              full: "9999px",
-            },
-            boxShadow: {
-              glass: "0 8px 32px 0 rgba(31, 38, 135, 0.07)",
-              glow: "0 0 15px rgba(17, 212, 196, 0.3)",
-            },
-          },
-        },
-      };
-    </script>
-    <style type="text/tailwindcss">
-      .glass-panel {
-        background: rgba(255, 255, 255, 0.65);
-        backdrop-filter: blur(12px);
-        -webkit-backdrop-filter: blur(12px);
-        border: 1px solid rgba(255, 255, 255, 0.8);
-      }
-      .flux-progress-bar {
-        background: linear-gradient(90deg, #11d4c4 0%, #4ad9cc 100%);
-        box-shadow: 0 0 12px rgba(17, 212, 196, 0.25);
-      }
-      .timeline-line {
-        background: linear-gradient(
-          90deg,
-          #11d4c4 0%,
-          #11d4c4 65%,
-          #e7f3f2 65%,
-          #e7f3f2 100%
-        );
-      }
-      .hide-scrollbar::-webkit-scrollbar {
-        display: none;
-      }
-      .hide-scrollbar {
-        -ms-overflow-style: none;
-        scrollbar-width: none;
-      }
-    </style>
+    <load src="/src/partials/head.html" title="Sira - Goals & Planner Path 2" />
   </head>
   <body
     class="bg-background-light dark:bg-background-dark text-text-main font-body selection:bg-primary/30"
   >
     <div class="flex h-screen w-full overflow-hidden">
-      <aside
-        class="hidden md:flex flex-col w-72 h-full border-r border-[#e7f3f2] bg-white/50 backdrop-blur-sm p-6 relative z-20"
-      >
-        <div class="flex items-center gap-4 mb-10 pl-2">
-          <div
-            class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10 shadow-sm"
-            style="background-image: url('/Sira_Official_Logo.webp')"
-          ></div>
-          <div class="flex flex-col">
-            <h1
-              class="text-text-main text-xl font-display font-bold leading-none tracking-tight"
-            >
-              Sira
-            </h1>
-            <p class="text-text-secondary text-xs font-body font-medium mt-1">
-              Mindful Finance
-            </p>
-          </div>
-        </div>
-        <nav class="flex-1 space-y-1 overflow-y-auto">
-          <a
-            class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
-            href="#"
-          >
-            <span class="material-symbols-outlined">dashboard</span>
-            <span class="font-semibold text-sm">Dashboard</span>
-          </a>
-          <a
-            class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
-            href="#"
-          >
-            <span class="material-symbols-outlined">account_balance</span>
-            <span class="font-semibold text-sm">Account</span>
-          </a>
-          <a
-            class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
-            href="#"
-          >
-            <span class="material-symbols-outlined">list_alt</span>
-            <span class="font-semibold text-sm">Transaction</span>
-          </a>
-          <a
-            class="flex items-center gap-3 px-4 py-3 bg-primary/10 text-primary rounded-xl transition-all"
-            href="#"
-          >
-            <span class="material-symbols-outlined">track_changes</span>
-            <span class="font-bold text-sm">Goals</span>
-          </a>
-          <a
-            class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
-            href="#"
-          >
-            <span class="material-symbols-outlined">payments</span>
-            <span class="font-semibold text-sm">Split Bill</span>
-          </a>
-          <a
-            class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
-            href="#"
-          >
-            <span class="material-symbols-outlined">category</span>
-            <span class="font-semibold text-sm">Categories</span>
-          </a>
-          <a
-            class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
-            href="#"
-          >
-            <span class="material-symbols-outlined">pie_chart</span>
-            <span class="font-semibold text-sm">Budget</span>
-          </a>
-          <a
-            class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
-            href="#"
-          >
-            <span class="material-symbols-outlined">bar_chart</span>
-            <span class="font-semibold text-sm">Report</span>
-          </a>
-          <a
-            class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
-            href="#"
-          >
-            <span class="material-symbols-outlined">settings</span>
-            <span class="font-semibold text-sm">Setting</span>
-          </a>
-        </nav>
-        <div class="mt-auto pt-6">
-          <div
-            class="glass-panel p-4 rounded-2xl mb-6 relative overflow-hidden group cursor-pointer"
-          >
-            <div
-              class="absolute top-0 right-0 p-2 opacity-10 group-hover:opacity-20 transition-opacity"
-            >
-              <span class="material-symbols-outlined text-6xl text-primary"
-                >psychology</span
-              >
-            </div>
-            <p
-              class="text-xs font-bold text-text-secondary uppercase tracking-wider mb-1"
-            >
-              Daily Insight
-            </p>
-            <p class="text-sm text-text-main font-medium leading-relaxed">
-              "Consistency is the path to wealth, not intensity."
-            </p>
-          </div>
-          <button
-            class="w-full flex items-center justify-center gap-2 rounded-xl h-12 bg-primary hover:bg-primary-hover text-text-main text-sm font-bold shadow-glow transition-all active:scale-95"
-          >
-            <span class="material-symbols-outlined text-lg">add</span>
-            <span>New Transaction</span>
-          </button>
-        </div>
-      </aside>
+      <load src="/src/partials/sidebar.html" />
       <main class="flex-1 flex flex-col h-full overflow-hidden relative">
         <div
           class="absolute top-[-10%] right-[-5%] w-[500px] h-[500px] bg-[#11d4c4]/5 rounded-full blur-[100px] pointer-events-none"
@@ -202,65 +15,12 @@
         <div
           class="absolute bottom-[-10%] left-[10%] w-[300px] h-[300px] bg-[#4c9a93]/10 rounded-full blur-[80px] pointer-events-none"
         ></div>
-        <header
-          class="flex items-center justify-between px-8 py-5 border-b border-[#e7f3f2]/60 bg-white/30 backdrop-blur-md z-10"
-        >
-          <div class="flex items-center gap-3">
-            <div
-              class="rounded-lg bg-primary/10 border border-primary/20 shadow-sm size-12 flex items-center justify-center text-primary"
-            >
-              <span class="material-symbols-outlined">explore</span>
-            </div>
-            <div>
-              <h2
-                class="text-text-main text-xl font-display font-bold leading-tight"
-              >
-                Your Financial Path
-              </h2>
-              <p class="text-text-secondary text-sm font-body">
-                2 milestones approaching this month
-              </p>
-            </div>
-          </div>
-          <div class="flex items-center gap-6">
-            <div class="relative hidden lg:flex items-center">
-              <span
-                class="material-symbols-outlined absolute left-3 text-text-secondary"
-                >search</span
-              >
-              <input
-                class="pl-10 pr-4 py-2.5 bg-white/50 border border-transparent focus:border-primary/30 focus:bg-white focus:ring-0 rounded-xl text-sm w-64 transition-all placeholder:text-text-secondary/70"
-                placeholder="Search ..."
-                type="text"
-              />
-            </div>
-            <button
-              class="relative p-2 rounded-full hover:bg-white/50 transition-colors text-text-main/80"
-            >
-              <span class="material-symbols-outlined">dark_mode</span>
-            </button>
-            <button
-              class="relative p-2 rounded-full hover:bg-white/50 transition-colors text-text-main/80"
-            >
-              <span class="material-symbols-outlined">notifications</span>
-              <span
-                class="absolute top-2 right-2 w-2 h-2 bg-red-400 rounded-full border-2 border-[#f8fcfb]"
-              ></span>
-            </button>
-            <div class="flex items-center gap-3 pl-4 border-l border-[#e7f3f2]">
-              <div class="text-right hidden sm:block">
-                <p class="text-sm font-bold text-text-main">Alex M.</p>
-                <p class="text-xs text-text-secondary">Premium Plan</p>
-              </div>
-              <div
-                class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10 border-2 border-white shadow-sm"
-                style="
-                  background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuAE4fj-Ts_xs0esQRbCO8BpuWVnpmI-XINI9GdfS7OMUMStmgGM_eQch56LX7IFuIwjQZtPCCquWFOS7_ejjCKlQOjILwFM1i0FiJNqznFaWhTuLC_trWTMwsgCprZoznFwsjkbj-czo-T95TnI4Fh6uhmE5fBjzMAIXskIMsGL1H-UYWEiy0Id1TYc1Ct9ZCwTF_mdpkw9QSa4VQB1cEkIqLuKP8lgTh6ZNrxesoWp0ZDdt_nFbNcmijViMORA9L_A94gRDAO_uJHH');
-                "
-              ></div>
-            </div>
-          </div>
-        </header>
+        <load
+          src="/src/partials/header.html"
+          title="Your Financial Path"
+          subtitle="2 milestones approaching this month"
+          icon="explore"
+        />
         <div class="flex-1 overflow-y-auto overflow-x-hidden p-8 scroll-smooth">
           <div class="max-w-7xl mx-auto flex flex-col gap-10">
             <div class="flex flex-col lg:flex-row gap-8">
