--- a/sira_category_manager_split_pane_1/code.html
+++ b/sira_category_manager_split_pane_1/code.html
@@ -1,222 +1,19 @@
 <!DOCTYPE html>
 <html class="light" lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Sira Budget Management Center</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&amp;family=JetBrains+Mono:wght@400;500;700&amp;display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    <script id="tailwind-config">
-      tailwind.config = {
-        darkMode: "class",
-        theme: {
-          extend: {
-            colors: {
-              primary: "#14ccc3",
-              "primary-hover": "#11b5ad",
-              "background-light": "#f8fafb",
-              "background-dark": "#0f1414",
-              "surface-light": "#ffffff",
-              "surface-dark": "#1a2221",
-              "sidebar-light": "#fcfdfe",
-            },
-            fontFamily: {
-              display: ["Outfit", "sans-serif"],
-              body: ["Outfit", "sans-serif"],
-              mono: ["JetBrains Mono", "monospace"],
-            },
-            borderRadius: {
-              DEFAULT: "0.5rem",
-              lg: "1rem",
-              xl: "1.5rem",
-              "2xl": "2rem",
-              full: "9999px",
-            },
-            boxShadow: {
-              glass: "0 8px 32px 0 rgba(31, 38, 135, 0.07)",
-              "glass-dark": "0 8px 32px 0 rgba(0, 0, 0, 0.3)",
-              "glow-primary": "0 0 20px rgba(20, 204, 195, 0.3)",
-              "glow-warning": "0 0 15px rgba(250, 204, 21, 0.3)",
-              "glow-danger": "0 0 15px rgba(239, 68, 68, 0.3)",
-            },
-          },
-        },
-      };
-    </script>
-    <style type="text/tailwindcss">
-      @layer base {
-        body {
-          @apply font-display;
-        }
-      }
-      ::-webkit-scrollbar {
-        width: 6px;
-        height: 6px;
-      }
-      ::-webkit-scrollbar-track {
-        background: transparent;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #cbd5e1;
-        border-radius: 3px;
-      }
-      .dark ::-webkit-scrollbar-thumb {
-        background: #334155;
-      }
-      .glass-panel {
-        background: rgba(255, 255, 255, 0.65);
-        backdrop-filter: blur(16px);
-        -webkit-backdrop-filter: blur(16px);
-        border: 1px solid rgba(255, 255, 255, 0.4);
-      }
-      .dark .glass-panel {
-        background: rgba(26, 34, 33, 0.65);
-        border: 1px solid rgba(255, 255, 255, 0.05);
-      }
-      .sidebar-compact {
-        width: 64px;
-        transition: width 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-      }
-      .sidebar-compact:hover {
-        width: 280px;
-      }
-      .sidebar-compact .nav-text {
-        opacity: 0;
-        width: 0;
-        overflow: hidden;
-        transition: opacity 0.2s;
-      }
-      .sidebar-compact:hover .nav-text {
-        opacity: 1;
-        width: auto;
-        margin-left: 12px;
-      }
-      .scrollbar-hide::-webkit-scrollbar {
-        display: none;
-      }
-      .scrollbar-hide {
-        -ms-overflow-style: none;
-        scrollbar-width: none;
-      }
-    </style>
+    <load src="/src/partials/head.html" title="Sira - Category Manager" />
   </head>
   <body
     class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-slate-100 overflow-hidden h-screen flex transition-colors duration-300"
   >
-    <aside
-      class="w-64 flex-none border-r border-slate-100 dark:border-slate-800 bg-sidebar-light dark:bg-surface-dark flex flex-col h-full z-50"
-    >
-      <div class="p-6">
-        <img
-          alt="Sira Logo"
-          class="h-8 w-auto"
-          src="https://lh3.googleusercontent.com/aida-public/AB6AXuAkkyk-CPArkVQgQMiuMZQg0ixZxK8_bFe9qFJrms7Z5g0b6hT6vZEkpIQ7Fg9Ca1h26Bip3m8xhabZIZQcdpz2K_nuSC4vuvvJfu_idYqrHh1Nc3NsmRdeodV8MueNNtX3OrS4kqmdY3OQpnLt6ISw4z5v1KtkiMeeshFPQ91TTsWrgMQvl3CWtxJ8f1LKoalkWhGPCaAK5Avxf5HgdIzYaeU5lbGXSbIOuQU-fWd44phWbULrhMuGO6881wtpB9puUsoGOWOHUelI"
-        />
-      </div>
-      <nav class="flex-1 px-4 space-y-1 overflow-y-auto">
-        <a
-          class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
-          href="#"
-        >
-          <span class="material-symbols-outlined">dashboard</span>
-          <span class="font-semibold text-sm">Dashboard</span>
-        </a>
-        <a
-          class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
-          href="#"
-        >
-          <span class="material-symbols-outlined">account_balance</span>
-          <span class="font-semibold text-sm">Accounts</span>
-        </a>
-        <a
-          class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
-          href="#"
-        >
-          <span class="material-symbols-outlined">list_alt</span>
-          <span class="font-semibold text-sm">Transactions</span>
-        </a>
-        <a
-          class="flex items-center gap-3 px-4 py-3 bg-primary/10 text-primary rounded-xl transition-all"
-          href="#"
-        >
-          <span class="material-symbols-outlined">pie_chart</span>
-          <span class="font-bold text-sm">Budget Manager</span>
-        </a>
-        <a
-          class="flex items-center gap-3 px-4 py-3 text-slate-500 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-xl transition-all"
-          href="#"
-        >
-          <span class="material-symbols-outlined">track_changes</span>
-          <span class="font-semibold text-sm">Goals</span>
-        </a>
-      </nav>
-      <div class="p-4 border-t border-slate-100 dark:border-slate-800">
-        <button
-          class="flex items-center gap-3 w-full px-4 py-3 text-slate-500 hover:bg-red-50 hover:text-red-500 rounded-xl transition-all"
-        >
-          <span class="material-symbols-outlined">logout</span>
-          <span class="font-semibold text-sm">Logout</span>
-        </button>
-      </div>
-    </aside>
+    <load src="/src/partials/sidebar.html" />
     <div class="flex-1 flex flex-col min-w-0 overflow-hidden">
-      <header
-        class="h-20 flex-none bg-white dark:bg-surface-dark border-b border-slate-100 dark:border-slate-800 flex items-center justify-between px-8 sticky top-0 z-40"
-      >
-        <div>
-          <h1 class="text-2xl font-extrabold tracking-tight">Budget Manager</h1>
-          <p class="text-xs text-slate-500 font-medium">October 2023</p>
-        </div>
-        <div class="flex items-center gap-6">
-          <div class="relative w-64 hidden md:block">
-            <span
-              class="material-symbols-outlined absolute left-3 top-1/2 -translate-y-1/2 text-slate-400 text-lg"
-              >search</span
-            >
-            <input
-              class="w-full h-10 pl-10 pr-4 bg-slate-50 dark:bg-background-dark border-none rounded-full text-sm focus:ring-2 focus:ring-primary/20 transition-all"
-              placeholder="Find category..."
-              type="text"
-            />
-          </div>
-          <div class="flex items-center gap-4">
-            <button
-              class="size-10 flex items-center justify-center rounded-full hover:bg-slate-100 dark:hover:bg-slate-800 text-slate-500 transition-colors"
-            >
-              <span class="material-symbols-outlined">notifications</span>
-            </button>
-            <div class="h-10 w-px bg-slate-100 dark:bg-slate-800"></div>
-            <div class="flex items-center gap-3 cursor-pointer group">
-              <div class="text-right hidden sm:block">
-                <p class="text-sm font-bold text-slate-900 dark:text-white">
-                  Sarah Jenkins
-                </p>
-                <p
-                  class="text-[10px] font-bold text-primary uppercase tracking-wider"
-                >
-                  Premium
-                </p>
-              </div>
-              <div
-                class="size-10 rounded-full ring-2 ring-primary/20 overflow-hidden group-hover:ring-primary/50 transition-all"
-              >
-                <img
-                  alt="User avatar"
-                  class="w-full h-full object-cover"
-                  src="https://lh3.googleusercontent.com/aida-public/AB6AXuDqsQNI6nnKfSHF2DQ7WiXi0XhkqnnEIBQz-DGErvWuHKRxMxf54wPmLipwECNrEy5j9nrKuNnu9LGw6tG4oJBHuI4pFl5d8jKWKX0-YFo1-rUKWEVocRBmOXOnJAB-hDUf5tpt7l38OMFJjbyn0VD0YUpBQJM__hX5nmCc30nUBoNaFeqHGv4UARDZ0VIxDzt45bg5Hz_iEaKbHy4KscNIOyOzU7D2XdT84d9Dumm-mzfdJEM6NkAMG37FUE8uStrboI6FoB3t8_ak"
-                />
-              </div>
-            </div>
-          </div>
-        </div>
-      </header>
+      <load
+        src="/src/partials/header.html"
+        title="Budget Manager"
+        subtitle="October 2023"
+        icon="pie_chart"
+      />
       <main class="flex-1 flex overflow-hidden">
         <aside
           class="w-72 flex-none flex flex-col bg-white dark:bg-surface-dark border-r border-slate-100 dark:border-slate-800 h-full overflow-y-auto z-30 transition-all"
