--- a/sira_category_manager_split_pane_1/code.html
+++ b/sira_category_manager_split_pane_1/code.html
@@ -6,7 +6,7 @@
   <body
     class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-slate-100 overflow-hidden h-screen flex transition-colors duration-300"
   >
-    <load src="/src/partials/sidebar.html" />
+    <load src="/src/partials/sidebar.html" active="categories" />
     <div class="flex-1 flex flex-col min-w-0 overflow-hidden">
       <load
         src="/src/partials/header.html"
