--- a/sira_goals_&_planner_path_3/code.html
+++ b/sira_goals_&_planner_path_3/code.html
@@ -7,7 +7,7 @@
     class="bg-background-light dark:bg-background-dark text-text-main font-body selection:bg-primary/30"
   >
     <div class="flex h-screen w-full overflow-hidden">
-      <load src="/src/partials/sidebar.html" />
+      <load src="/src/partials/sidebar.html" active="goals" />
       <main class="flex-1 flex flex-col h-full overflow-hidden relative">
         <div
           class="absolute top-[-10%] right-[-5%] w-[500px] h-[500px] bg-[#11d4c4]/5 rounded-full blur-[100px] pointer-events-none"
