--- a/sira_category_manager_split_pane_1/code.html
+++ b/sira_category_manager_split_pane_1/code.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html class="light" lang="en">
   <head>
-    <load src="/src/partials/head.html" title="Sira - Category Manager" />
+    <load src="/src/partials/head.html" title="Sira - Budget Manager" />
   </head>
   <body
     class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-slate-100 overflow-hidden h-screen flex transition-colors duration-300"
   >
-    <load src="/src/partials/sidebar.html" active="categories" />
+    <load src="/src/partials/sidebar.html" active="budget" />
     <div class="flex-1 flex flex-col min-w-0 overflow-hidden">
       <load
         src="/src/partials/header.html"
@@ -24,7 +24,7 @@
             <h3
               class="text-xs font-bold text-slate-500 uppercase tracking-widest pl-1"
             >
-              Categories
+              Budget
             </h3>
             <button
               class="p-1.5 rounded-lg text-slate-400 hover:bg-slate-50 hover:text-primary transition-all"
