--- a/sira_user_settings_profile/code.html
+++ b/sira_user_settings_profile/code.html
@@ -2,24 +2,27 @@
 <html class="light" lang="en">
   <head>
     <load src="/src/partials/head.html" title="Sira - User Settings" />
-    <style type="text/tailwindcss">
-      @layer utilities {
-        .glass-panel {
-          @apply bg-surface-glass backdrop-blur-xl border border-white/60 shadow-glass;
-        }
-        ::-webkit-scrollbar {
-          width: 6px;
-          height: 6px;
-        }
-        ::-webkit-scrollbar-track {
-          background: transparent;
-        }
-        ::-webkit-scrollbar-thumb {
-          @apply bg-slate-200 rounded-full;
-        }
-        ::-webkit-scrollbar-thumb:hover {
-          @apply bg-slate-300;
-        }
+    <style>
+      .glass-panel {
+        background: rgba(255, 255, 255, 0.65);
+        backdrop-filter: blur(24px);
+        -webkit-backdrop-filter: blur(24px);
+        border: 1px solid rgba(255, 255, 255, 0.6);
+        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.07);
+      }
+      ::-webkit-scrollbar {
+        width: 6px;
+        height: 6px;
+      }
+      ::-webkit-scrollbar-track {
+        background: transparent;
+      }
+      ::-webkit-scrollbar-thumb {
+        background: #cbd5e1;
+        border-radius: 9999px;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: #94a3b8;
       }
     </style>
   </head>
