refactor: file path account pages

--- a/index.html
+++ b/index.html
@@ -297,30 +297,31 @@
         },
         // # Accounts
         {
-          name: "Account Matrix (V1)",
-          path: "sira_account_matrix_management_1",
+          name: "Account - Table View",
+          path: "account__table-view",
           category: "Accounts",
         },
         {
-          name: "Account Matrix (V2)",
-          path: "sira_account_matrix_management_2",
+          name: "Account - Card View",
+          path: "account__card-view",
           category: "Accounts",
         },
         {
-          name: "Account Matrix (V3)",
-          path: "sira_account_matrix_management_3",
+          name: "Account - Accordion View",
+          path: "account__accordion-view",
           category: "Accounts",
         },
         {
-          name: "Account Matrix (V4)",
-          path: "sira_account_matrix_management_4",
+          name: "Connect Provider",
+          path: "account__connect-provider",
           category: "Accounts",
         },
         {
-          name: "Account Matrix (V5)",
-          path: "sira_account_matrix_management_5",
+          name: "Create New Pocket",
+          path: "account__create-new-pocket",
           category: "Accounts",
         },
+
         // # Transactions
         {
           name: "Transaction Ledger (V1)",
