refactor: file path transaction pages

--- a/index.html
+++ b/index.html
@@ -324,45 +324,46 @@
 
         // # Transactions
         {
-          name: "Transaction Ledger (V1)",
-          path: "sira_transaction_ledger_journal_1",
+          name: "Transaction - Grid View",
+          path: "transaction__grid-view",
           category: "Transactions",
         },
         {
-          name: "Transaction Ledger (V2)",
-          path: "sira_transaction_ledger_journal_2",
+          name: "Transaction - List View",
+          path: "transaction_list-view",
           category: "Transactions",
         },
         {
-          name: "Transaction Ledger (V3)",
-          path: "sira_transaction_ledger_journal_3",
+          name: "Transaction - Accordion View",
+          path: "transaction__accordion-view",
           category: "Transactions",
         },
         {
-          name: "Transaction Ledger (V4)",
-          path: "sira_transaction_ledger_journal_4",
+          name: "Transaction - Report Summary",
+          path: "transaction__report-summary",
           category: "Transactions",
         },
         {
-          name: "Transaction Ledger (V5)",
-          path: "sira_transaction_ledger_journal_5",
+          name: "Transaction - Add Income (Main)",
+          path: "transaction__add-income-main",
           category: "Transactions",
         },
         {
-          name: "Transaction Ledger (V6)",
-          path: "sira_transaction_ledger_journal_6",
+          name: "Transaction - Add Expense",
+          path: "transaction__add-expense",
           category: "Transactions",
         },
         {
-          name: "Transaction Ledger (V7)",
-          path: "sira_transaction_ledger_journal_7",
+          name: "Transaction - Add Transfer",
+          path: "transaction__add-transfer",
           category: "Transactions",
         },
         {
-          name: "Transaction Ledger (V8)",
-          path: "sira_transaction_ledger_journal_8",
+          name: "Transaction - Add Transcation Backup",
+          path: "transaction__add-transaction-backup",
           category: "Transactions",
         },
+
         // # Goals
         {
           name: "Goals & Planner (V1)",
