refactor: file path goals pages

--- a/index.html
+++ b/index.html
@@ -367,19 +367,20 @@
         // # Goals
         {
           name: "Goals & Planner (V1)",
-          path: "sira_goals_&_planner_path_1",
+          path: "goals__v1",
           category: "Goals",
         },
         {
           name: "Goals & Planner (V2)",
-          path: "sira_goals_&_planner_path_2",
+          path: "goals__v2",
           category: "Goals",
         },
         {
-          name: "Goals & Planner (V3)",
-          path: "sira_goals_&_planner_path_3",
+          name: "Goals & Planner - Detail Screen",
+          path: "goals__detail-screen",
           category: "Goals",
         },
+
         // # Management
         {
           name: "Category Manager (V1)",
