refactor: file path management pages

--- a/index.html
+++ b/index.html
@@ -383,18 +383,18 @@
 
         // # Management
         {
-          name: "Category Manager (V1)",
-          path: "sira_category_manager_split_pane_1",
+          name: "Budget Management",
+          path: "management__budget",
           category: "Management",
         },
         {
-          name: "Category Manager (V2)",
-          path: "sira_category_manager_split_pane_2",
+          name: "Category Management (V1-Main)",
+          path: "management__category-v1",
           category: "Management",
         },
         {
-          name: "Category Manager (V3)",
-          path: "sira_category_manager_split_pane_3",
+          name: "Category Management (V2-Backup)",
+          path: "management__category-v2",
           category: "Management",
         },
         // # Utilities
