refactor: file path utilities pages

--- a/index.html
+++ b/index.html
@@ -405,24 +405,30 @@
         },
         {
           name: "Split Bill (V2)",
-          path: "sira_split_bill_utility_2",
-          category: "Utilities",
-        },
-        {
-          name: "Split Bill (V3)",
           path: "sira_split_bill_utility_3",
           category: "Utilities",
         },
         {
-          name: "Split Bill (V4)",
+          name: "Split Bill (V3)",
           path: "sira_split_bill_utility_4",
           category: "Utilities",
         },
         {
-          name: "Split Bill (V5)",
+          name: "Data Import - Main",
           path: "sira_split_bill_utility_5",
           category: "Utilities",
         },
+        {
+          name: "Data Import - Backup",
+          path: "sira_split_bill_utility_2",
+          category: "Utilities",
+        },
+        {
+          name: "Data Import - Success Message",
+          path: "sira_import_success_summary",
+          category: "Utilities",
+        },
+
         // # Others
         {
           name: "User Settings",
@@ -431,16 +437,10 @@
           order: 1,
         },
         {
-          name: "Import Success",
-          path: "sira_import_success_summary",
-          category: "Other",
-          order: 2,
-        },
-        {
           name: "Wealth Wizard Overlay",
           path: "sira_wealth_flow_wizard_overlay",
           category: "Other",
-          order: 3,
+          order: 2,
         },
       ];
 
